# caravel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: azure-qualification.yml  ci.yml
docs/: production_readiness_roadmap.md
docs/changelogs/: C-1.md  C-6.md
examples/: __init__.py
examples/branching/: README.md  __init__.py  __main__.py  pipeline.py
examples/branching/data/html_source/: html_alpha.html  html_beta.html
examples/branching/data/json_source/: json_alpha.json  json_beta.json
examples/branching/data_collision/html_source/: html_collision.html
examples/custom_context/: __init__.py  __main__.py  pipeline.py
examples/fsspec/: .env.example  README.md  __init__.py  pipeline.py
examples/fsspec/data/: input_partitions.json
examples/fsspec_minimal/: __main__.py  pipeline.py
examples/fsspec_partitioned/: .env.example  README.md  __init__.py  __main__.py  pipeline.py
examples/minimal/: README.md  __init__.py  __main__.py  pipeline.py
examples/minimal/data/: input_partitions.json
examples/multisource/: README.md  __init__.py  __main__.py  pipeline.py
examples/partitioned/: README.md  __init__.py  __main__.py  pipeline.py
examples/persist_only_final/: __init__.py  __main__.py  pipeline.py
examples/production_profile/: README.md  __init__.py  __main__.py  profile.py
examples/tests/: test_branching_pipeline.py  test_minimal_pipeline.py  test_multisource_pipeline.py  test_partitioned_pipeline.py
pipeline/: __init__.py  branch.py  cli.py  datasets.py  loaders.py  paths.py  pipeline.py  runner.py  types.py  viz.py
pipeline/tests/: test_branch.py  test_cli.py  test_datasets.py  test_loaders.py  test_paths.py  test_pipeline.py  test_runner.py  test_types.py  test_viz.py
src/caravel/: __init__.py  branch.py  cli.py  datasets.py  loaders.py  logger.py  paths.py  pipeline.py  plan.py  plugins.py  runner.py  storage.py  types.py  viz.py
src/caravel/plugins/: __init__.py  api.py  checkpoint.py  lease.py  ownership.py  run_evidence.py
tests/caravel/: test_branch.py  test_checkpoint_plugin.py  test_checkpoints.py  test_cli.py  test_datasets.py  test_lease_plugin.py  test_loaders.py  test_ownership_plugin.py  test_package.py  test_paths.py  test_pipeline.py  test_plan.py  test_plugins.py  test_run_evidence_plugin.py  test_runner.py  test_security.py  test_storage.py  test_types.py  test_viz.py
tests/examples/: test_branching_pipeline.py  test_fsspec_pipeline.py  test_minimal_pipeline.py  test_multisource_pipeline.py  test_partitioned_pipeline.py  test_persist_only_final_pipeline.py  test_production_profile.py
tests/qualification/: test_azure_profile.py
utils/: __init__.py  logger.py
(+17 files in other folders)
