[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caravel"
version = "0.1.0"
description = "A lightweight deterministic pipeline runner with branch routing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "JMS Apps" },
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
