[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caravel"
version = "0.1.0"
description = "A lightweight deterministic pipeline runner with branch routing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "JMS Apps" },
]
dependencies = [
  "fsspec",
  "python-dotenv==1.2.2"
]

[project.optional-dependencies]
test = [
  "pytest",
]
azure = [
  "adlfs",
  "azure-identity",
]
gcp = [
  "gcsfs",
]
s3 = [
  "s3fs",
]
cloud = [
  "adlfs",
  "azure-identity",
  "gcsfs",
  "s3fs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
