[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caravel"
version = "0.1.0"
description = "A lightweight deterministic pipeline runner with branch routing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "JMS Apps" },
]
dependencies = [
  "fsspec>=2024.6.0",
]

[project.optional-dependencies]
examples = [
  "python-dotenv==1.2.2",
]
test = [
  "mypy>=1.16",
  "pytest>=8",
  "python-dotenv==1.2.2",
  "ruff>=0.12",
]
azure = [
  "adlfs",
  "azure-identity",
]
gcp = [
  "gcsfs",
]
s3 = [
  "s3fs",
]
cloud = [
  "adlfs",
  "azure-identity",
  "gcsfs",
  "s3fs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
caravel = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/examples/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/caravel"]

# fsspec does not currently publish a py.typed marker. Remove this override
# when its public interfaces become typed.
[[tool.mypy.overrides]]
module = ["fsspec", "fsspec.*"]
ignore_missing_imports = true
